add clustering to cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,6 +9,9 @@ set(CMAKE_CXX_STANDARD_REQUIRED on)
 
 set(HDBSCAN_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
 set(HEADER_FILES ${HDBSCAN_INCLUDE_DIR}/distance.h)
+set(HEADER_FILES ${HDBSCAN_INCLUDE_DIR}/union_find.h)
+set(HEADER_FILES ${HDBSCAN_INCLUDE_DIR}/clustering.h)
+set(HEADER_FILES ${HDBSCAN_INCLUDE_DIR}/cluster.h)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
 enable_testing()
