--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_library(hdbscan_lib distance.cpp)
+add_library(hdbscan_lib distance.cpp union_find.cpp clustering.cpp)
 target_include_directories(hdbscan_lib PUBLIC ${HDBSCAN_INCLUDE_DIR})
 
 add_executable(hdbscan main.cpp)
