Add hdbscan to benchmark; add verbose mode

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,6 +21,10 @@ set(HEADER_FILES
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
+IF(HDBSCAN_VERBOSE MATCHES "1")
+  ADD_DEFINITIONS(-D HDBSCAN_VERBOSE)
+ENDIF()
+
 enable_testing()
 add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND})
 add_custom_target(benchmark COMMAND ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/hdbscan_benchmark)
