--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -8,13 +8,17 @@ add_library(hdbscan_lib
 )
 target_include_directories(hdbscan_lib PUBLIC ${HDBSCAN_INCLUDE_DIR})
 
-add_library(hdbscan_benchmark_lib benchmark_util.cpp)
+add_library(hdbscan_benchmark_lib EXCLUDE_FROM_ALL
+  benchmark_util.cpp
+)
 target_include_directories(hdbscan_benchmark_lib PUBLIC ${HDBSCAN_INCLUDE_DIR})
 
 add_executable(hdbscan main.cpp)
 target_link_libraries(hdbscan PRIVATE hdbscan_lib)
 
-add_executable(hdbscan_benchmark benchmark_main.cpp)
+add_executable(hdbscan_benchmark EXCLUDE_FROM_ALL
+  benchmark_main.cpp
+)
 target_link_libraries(hdbscan_benchmark PRIVATE
   hdbscan_lib
   hdbscan_benchmark_lib
