Add simple instrumentation to count sqrt operations

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,10 @@ IF(HDBSCAN_VERBOSE MATCHES "1")
   ADD_DEFINITIONS(-D HDBSCAN_VERBOSE)
 ENDIF()
 
+IF(HDBSCAN_INSTRUMENT MATCHES "1")
+  ADD_DEFINITIONS(-D HDBSCAN_INSTRUMENT)
+ENDIF()
+
 IF(NOT DEFINED HDBSCAN_DATA_DIR)
   set(HDBSCAN_DATA_DIR ${CMAKE_CURRENT_SOURCE_DIR}/data)
 ENDIF()
