add possible benchmarking for AMD systems

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -33,6 +33,10 @@ IF(NOT DEFINED HDBSCAN_DATA_DIR)
   set(HDBSCAN_DATA_DIR ${CMAKE_CURRENT_SOURCE_DIR}/data)
 ENDIF()
 
+IF(BENCHMARK_AMD MATCHES "1")
+  ADD_DEFINITIONS(-D BENCHMARK_AMD)
+ENDIF()
+
 
 enable_testing()
 add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND})
