include choice between computing full dist matrix or only core_dist

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,6 +37,10 @@ IF(BENCHMARK_AMD MATCHES "1")
   ADD_DEFINITIONS(-D BENCHMARK_AMD)
 ENDIF()
 
+IF(HDBSCAN_PRECOMPUTE_DIST MATCHES "1")
+  ADD_DEFINITIONS(-D HDBSCAN_PRECOMPUTE_DIST)
+ENDIF()
+
 
 enable_testing()
 add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND})
