add possibility to print compiler variables at runtime with config.h

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -6,6 +6,16 @@ add_library(hdbscan_lib
   prim.cpp
   hdbscan.cpp
 )
+
+option(
+    OUTPUT_COMPILER_INFO
+    "Output compiler information when launching the main executable." ON)
+
+configure_file (
+    "${HDBSCAN_INCLUDE_DIR}/config.h.in"
+    "${HDBSCAN_INCLUDE_DIR}/config.h"
+)
+
 target_include_directories(hdbscan_lib PUBLIC ${HDBSCAN_INCLUDE_DIR})
 set_target_properties(hdbscan_lib PROPERTIES COMPILE_FLAGS "-save-temps")
 
@@ -23,6 +33,7 @@ set_target_properties(hdbscan_lib_vec PROPERTIES COMPILE_FLAGS "-save-temps")
 add_library(hdbscan_benchmark_lib EXCLUDE_FROM_ALL
   benchmark_util.cpp
 )
+
 target_include_directories(hdbscan_benchmark_lib PUBLIC ${HDBSCAN_INCLUDE_DIR})
 
 add_executable(hdbscan main.cpp)
