--- a/include/config.h.in
+++ b/include/config.h.in
@@ -2,4 +2,6 @@
 #define COMPILER_NAME "@CMAKE_CXX_COMPILER@"
 #define COMPILER_ID "@CMAKE_CXX_COMPILER_ID@"
 #define COMPILER_VERSION "@CMAKE_CXX_COMPILER_VERSION@"
+#define COMPILER_FLAGS "@CMAKE_CXX_FLAGS@"
+#cmakedefine OPT_LEVEL "@OPT_LEVEL@"
 #cmakedefine OUTPUT_COMPILER_INFO
