--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,3 +1,16 @@
+option(
+  OUTPUT_COMPILER_INFO
+  "Output compiler information when launching the main executable." ON
+)
+
+configure_file (
+  "${HDBSCAN_INCLUDE_DIR}/config.h.in"
+  "${HDBSCAN_INCLUDE_DIR}/config.h"
+)
+
+######################################################
+################### PRIM ADVANCED ####################
+######################################################
 add_library(hdbscan_lib
   distance.cpp
   union_find.cpp
@@ -6,20 +19,28 @@ add_library(hdbscan_lib
   prim.cpp
   hdbscan.cpp
 )
-
-option(
-    OUTPUT_COMPILER_INFO
-    "Output compiler information when launching the main executable." ON
-)
-
-configure_file (
-    "${HDBSCAN_INCLUDE_DIR}/config.h.in"
-    "${HDBSCAN_INCLUDE_DIR}/config.h"
-)
-
 target_include_directories(hdbscan_lib PUBLIC ${HDBSCAN_INCLUDE_DIR})
 set_target_properties(hdbscan_lib PROPERTIES COMPILE_FLAGS "-save-temps")
+add_executable(hdbscan main.cpp)
+target_link_libraries(hdbscan PRIVATE hdbscan_lib)
 
+################### 
+#### BENCHMARK ####
+###################
+add_library(hdbscan_benchmark_lib EXCLUDE_FROM_ALL
+  benchmark_util.cpp
+)
+target_include_directories(hdbscan_benchmark_lib PUBLIC ${HDBSCAN_INCLUDE_DIR})
+add_executable(hdbscan_benchmark EXCLUDE_FROM_ALL
+  benchmark_main.cpp
+)
+target_link_libraries(hdbscan_benchmark PRIVATE
+  hdbscan_lib
+  hdbscan_benchmark_lib
+)
+################### 
+#### VECTORIZED ####
+###################
 add_library(hdbscan_lib_vec
   distance_vectorized.cpp
   union_find.cpp
@@ -30,26 +51,6 @@ add_library(hdbscan_lib_vec
 )
 target_include_directories(hdbscan_lib_vec PUBLIC ${HDBSCAN_INCLUDE_DIR})
 set_target_properties(hdbscan_lib_vec PROPERTIES COMPILE_FLAGS "-save-temps")
-
-add_library(hdbscan_benchmark_lib EXCLUDE_FROM_ALL
-  benchmark_util.cpp
-)
-
-target_include_directories(hdbscan_benchmark_lib PUBLIC ${HDBSCAN_INCLUDE_DIR})
-
-add_executable(hdbscan main.cpp)
-target_link_libraries(hdbscan PRIVATE hdbscan_lib)
-
-add_executable(hdbscan_vec main.cpp)
-target_link_libraries(hdbscan_vec PRIVATE hdbscan_lib_vec)
-
-add_executable(hdbscan_benchmark EXCLUDE_FROM_ALL
-  benchmark_main.cpp
-)
-target_link_libraries(hdbscan_benchmark PRIVATE
-  hdbscan_lib
-  hdbscan_benchmark_lib
-)
 add_executable(hdbscan_benchmark_vec EXCLUDE_FROM_ALL
   benchmark_main.cpp
 )
@@ -57,3 +58,45 @@ target_link_libraries(hdbscan_benchmark_vec PRIVATE
   hdbscan_lib_vec
   hdbscan_benchmark_lib
 )
+add_executable(hdbscan_vec main.cpp)
+target_link_libraries(hdbscan_vec PRIVATE hdbscan_lib_vec)
+
+######################################################
+################ END PRIM ADVANCED ###################
+######################################################
+
+
+######################################################
+################### PRIM BASIC #######################
+######################################################
+# the version with precomputation of distances
+add_library(hdbscan_basic_lib
+  distance.cpp
+  union_find.cpp
+  clustering.cpp
+  utils.cpp
+  prim.cpp
+  hdbscan_basic.cpp
+)
+target_include_directories(hdbscan_basic_lib PUBLIC ${HDBSCAN_INCLUDE_DIR})
+set_target_properties(hdbscan_basic_lib PROPERTIES COMPILE_FLAGS "-save-temps")
+add_executable(hdbscan_basic main.cpp)
+target_link_libraries(hdbscan_basic PRIVATE hdbscan_basic_lib)
+
+################### 
+#### BENCHMARK ####
+###################
+add_library(hdbscan_basic_benchmark_lib EXCLUDE_FROM_ALL
+  benchmark_util.cpp
+)
+target_include_directories(hdbscan_basic_benchmark_lib PUBLIC ${HDBSCAN_INCLUDE_DIR})
+add_executable(hdbscan_basic_benchmark EXCLUDE_FROM_ALL
+  benchmark_main.cpp
+)
+target_link_libraries(hdbscan_basic_benchmark PRIVATE
+  hdbscan_basic_lib
+  hdbscan_basic_benchmark_lib
+)
+#############################
+####### END PRIM BASIC ######
+#############################
