--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,7 +10,7 @@ set(CMAKE_CXX_STANDARD_REQUIRED on)
 if(OPT_LEVEL)
     # Default compiler flags with custom optimization level
     message("Running with custom optimization level: -${OPT_LEVEL}")
-    set(CMAKE_CXX_FLAGS "-${OPT_LEVEL} -g -march=native W -Wall -pedantic") 
+    set(CMAKE_CXX_FLAGS "-${OPT_LEVEL} -g -march=native -W -Wall -pedantic") 
 else()
     # Default compiler flags
     set(CMAKE_CXX_FLAGS "-O3 -g -march=native -W -Wall -pedantic")
