new partition version without pext/pdep; better for amd

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,6 +52,10 @@ IF(HDBSCAN_PRECOMPUTE_DIST_TRIANG MATCHES "1")
   ADD_DEFINITIONS(-D HDBSCAN_PRECOMPUTE_DIST_TRIANG)
 ENDIF()
 
+IF(PACKLEFT_WLOOKUP MATCHES "1")
+  ADD_DEFINITIONS(-D PACKLEFT_WLOOKUP)
+ENDIF()
+
 
 enable_testing()
 add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND})
