Plotting for different k

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -63,6 +63,10 @@ IF(PACKLEFT_WLOOKUP MATCHES "1")
   ADD_DEFINITIONS(-D PACKLEFT_WLOOKUP)
 ENDIF()
 
+IF(HDBSCAN_QUICKSELECT MATCHES "1")
+  ADD_DEFINITIONS(-D HDBSCAN_QUICKSELECT)
+ENDIF()
+
 
 enable_testing()
 add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND})
