--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,9 +67,6 @@ IF(HDBSCAN_QUICKSELECT MATCHES "1")
   ADD_DEFINITIONS(-D HDBSCAN_QUICKSELECT)
 ENDIF()
 
-
-enable_testing()
-add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND})
 add_custom_target(build_bench
   DEPENDS
     hdbscan_benchmark_lib
@@ -106,39 +103,44 @@ add_custom_target(benchmark_vec
     hdbscan_benchmark_vec
 )
 
-if(DEFINED ENV{GTEST_ROOT})
-  find_package(GTest REQUIRED)
-else()
-
-  # The following block sets up a dependency on GTest as described at:
-  # https://github.com/google/googletest/blob/master/googletest/README.md
-  configure_file(CMakeLists.txt.in googletest-download/CMakeLists.txt)
-
-  execute_process(COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" .
-    RESULT_VARIABLE result
-    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/googletest-download )
-  if(result)
-    message(FATAL_ERROR "CMake step for googletest failed: ${result}")
-  endif()
-  execute_process(COMMAND ${CMAKE_COMMAND} --build .
-    RESULT_VARIABLE result
-    WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/googletest-download )
-  if(result)
-    message(FATAL_ERROR "Build step for googletest failed: ${result}")
-  endif()
-
-  # Prevent overriding the parent project's compiler/linker
-  # settings on Windows
-  set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
-
-  # Add googletest directly to our build. This defines
-  # the gtest and gtest_main targets.
-  add_subdirectory(${CMAKE_CURRENT_BINARY_DIR}/googletest-src
-                  ${CMAKE_CURRENT_BINARY_DIR}/googletest-build
-                  EXCLUDE_FROM_ALL)
-
-endif()
-
-
 add_subdirectory(src)
-add_subdirectory(test)
+
+IF(HDBSCAN_TEST MATCHES "1")
+  enable_testing()
+  add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND})
+
+  if(DEFINED ENV{GTEST_ROOT})
+    find_package(GTest REQUIRED)
+  else()
+
+    # The following block sets up a dependency on GTest as described at:
+    # https://github.com/google/googletest/blob/master/googletest/README.md
+    configure_file(CMakeLists.txt.in googletest-download/CMakeLists.txt)
+
+    execute_process(COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" .
+      RESULT_VARIABLE result
+      WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/googletest-download )
+    if(result)
+      message(FATAL_ERROR "CMake step for googletest failed: ${result}")
+    endif()
+    execute_process(COMMAND ${CMAKE_COMMAND} --build .
+      RESULT_VARIABLE result
+      WORKING_DIRECTORY ${CMAKE_CURRENT_BINARY_DIR}/googletest-download )
+    if(result)
+      message(FATAL_ERROR "Build step for googletest failed: ${result}")
+    endif()
+
+    # Prevent overriding the parent project's compiler/linker
+    # settings on Windows
+    set(gtest_force_shared_crt ON CACHE BOOL "" FORCE)
+
+    # Add googletest directly to our build. This defines
+    # the gtest and gtest_main targets.
+    add_subdirectory(${CMAKE_CURRENT_BINARY_DIR}/googletest-src
+                    ${CMAKE_CURRENT_BINARY_DIR}/googletest-build
+                    EXCLUDE_FROM_ALL)
+
+  endif()
+
+  add_subdirectory(test)
+ENDIF()
