Fine grained performance measurement of distance computation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,6 +67,10 @@ IF(HDBSCAN_QUICKSELECT MATCHES "1")
   ADD_DEFINITIONS(-D HDBSCAN_QUICKSELECT)
 ENDIF()
 
+IF(FINE_GRAINED_BENCH MATCHES "1")
+  ADD_DEFINITIONS(-D FINE_GRAINED_BENCH)
+ENDIF()
+
 add_custom_target(build_bench
   DEPENDS
     hdbscan_benchmark_lib
