Cmake flag to enable/disable specialized distance computation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,6 +71,10 @@ IF(FINE_GRAINED_BENCH MATCHES "1")
   ADD_DEFINITIONS(-D FINE_GRAINED_BENCH)
 ENDIF()
 
+IF(SPECIALIZED_DISTANCE MATCHES "1")
+  ADD_DEFINITIONS(-D SPECIALIZED_DISTANCE)
+ENDIF()
+
 add_custom_target(build_bench
   DEPENDS
     hdbscan_benchmark_lib
