CMake flag for manhattan distance

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -75,6 +75,10 @@ IF(SPECIALIZED_DISTANCE MATCHES "1")
   ADD_DEFINITIONS(-D SPECIALIZED_DISTANCE)
 ENDIF()
 
+IF(HDBSCAN_MANHATTAN MATCHES "1")
+  ADD_DEFINITIONS(-D HDBSCAN_MANHATTAN)
+ENDIF()
+
 add_custom_target(build_bench
   DEPENDS
     hdbscan_benchmark_lib
